<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="unitSystemValues">
        <item>METRIC</item>
        <item>IMPERIAL</item>
    </string-array>
    <string-array name="unitSystemEntries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="locationValues">
        <item>Istanbul</item>
        <item>London</item>
        <item>Madrid</item>
    </string-array>
    <string-array name="locationEntries">
        <item>İstanbul</item>
        <item>London</item>
        <item>Madrid</item>
    </string-array>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <string name="current_weather_item">Today</string>
    <string name="future_current_item">5 Days</string>
    <string name="setting_item">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="map">Map</string>
</resources>