<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item android:id="@+id/currentWeatherFragment"
            android:icon="@drawable/ic_temperature"
            android:title="@string/current_weather_item" />

        <item android:id="@+id/futureWeatherFragment"
            android:icon="@drawable/ic_five_days"
            android:title="@string/future_current_item" />

        <item android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting_item" />
    </group>

    <item android:title="">
        <menu>
            <group android:id="@+id/menu_bottom"
                android:checkableBehavior="none">
                <item android:title="@string/rate_us"
                    android:icon="@drawable/ic_rate_us"/>
                <item android:title="@string/privacy_policy"
                    android:icon="@drawable/ic_privacy"/>
            </group>
        </menu>
    </item>
</menu>